# fgpic

./: .gitmodules  CMakeLists.txt  README.txt
examples/: CMakeLists.txt
examples/ADS_1115/: CMakeLists.txt  ads_1115.cpp  parse_serial.py
examples/AHT_20/: CMakeLists.txt  aht_20.cpp  kst_display.py
examples/DS_3231/: CMakeLists.txt  ds_3231.cpp
examples/SHT_35/: CMakeLists.txt  parse_serial.py  sht_35.cpp
examples/freertos/: CMakeLists.txt  FreeRTOSConfig.h  main.cpp
includes/fgpic/: i2c.hpp
includes/fgpic/sensors/: ADS1115.hpp  AHT20.hpp  DS3231.hpp  SHT35.hpp
src/: i2c.cpp
src/sensors/: ADS1115.cpp  AHT20.cpp  DS3231.cpp  SHT35.cpp
